[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "mlflow>=2.21.3",
    "numpy>=2.2.4",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "uvicorn[standard]>=0.34.0",
]
